[gd_scene load_steps=15 format=1]

[ext_resource path="res://Sprites/book-page-no-effect.png" type="Texture" id=1]
[ext_resource path="res://Fonts/palatino-regular.fnt" type="BitmapFont" id=2]
[ext_resource path="res://UI/DialogPanel.gd" type="Script" id=3]
[ext_resource path="res://Sprites/test-scrollbar.png" type="Texture" id=4]
[ext_resource path="res://UI/ScrollContainer.gd" type="Script" id=5]
[ext_resource path="res://UI/ScriptContainer.gd" type="Script" id=6]
[ext_resource path="res://Sprites/bookmark-animation.png" type="Texture" id=7]
[ext_resource path="res://Sprites/book-page-effects.png" type="Texture" id=8]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 1 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="Theme" id=2]

default_font = ExtResource( 2 )
Panel/styles/panel = SubResource( 1 )
Panel/styles/panelf = null
Panel/styles/panelnc = null

[sub_resource type="StyleBoxTexture" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="Theme" id=4]

VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_hilite = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_hilite = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_hilite = null
VScrollBar/styles/scroll = SubResource( 3 )
VScrollBar/styles/scroll_focus = null

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2, 1 ), Vector2( -377, 1 ) ]
}

[sub_resource type="Animation" id=6]

resource/name = "slide_right"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="DialogPanel" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 2 )
margin/left = -377.0
margin/top = 1.0
margin/right = -13.0
margin/bottom = 535.0
script/script = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 4 )
margin/left = 48.0
margin/top = 31.0
margin/right = 323.0
margin/bottom = 466.0
scroll/horizontal = false
scroll/vertical = true
script/script = ExtResource( 5 )

[node name="ScriptContainer" type="VBoxContainer" parent="ScrollContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/separation = 5
alignment = 0
script/script = ExtResource( 6 )

[node name="AnswersContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 370.0
margin/top = 3.0
margin/right = 716.0
margin/bottom = 595.0
custom_constants/separation = 10
alignment = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Slide_left = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SlideButton" type="TextureButton" parent="."]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 338.0
margin/top = 93.0
margin/right = 448.0
margin/bottom = 193.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="Sprite" type="Sprite" parent="SlideButton"]

transform/pos = Vector2( 52.8573, 54.2859 )
texture = ExtResource( 7 )
hframes = 6
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="SlideButton"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/slide_right = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="TextureFrame" type="TextureFrame" parent="."]

rect/scale = Vector2( 0.37, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -9.0
margin/top = -3.0
margin/right = 966.0
margin/bottom = 1066.0
texture = ExtResource( 8 )
stretch_mode = 0

[connection signal="pressed" from="SlideButton" to="." method="_on_SlideButton_pressed"]


